Agrego la ventana del juego

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@deck-of-cards-module/*":["src/app/modules/deck-of-cards-game/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
